[package]
name = "x7_actionkv"
version = "0.1.0"
authors = ["ilmoi <iljamoi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libactionkv"
path = "src/lib.rs"

[[bin]]
name = "akv_mem"
path = "src/main.rs"

[dependencies]
byteorder = "1.4.3"
crc = "1.7"
serde = { version = "1.0.126", features = ["derive"] }
